# SEAM

./: .gitignore  HANDOFF.md  INSTALL.ko.md  INSTALL.md  LICENSE  NOTICE  PUBLISHING.md  README.ko.md  README.md  README_EN.md  TUTORIAL.ko.md  TUTORIAL.md  ai_sug.json  en.html  engines.json  index.html
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
backend/: .env.example  MANIFEST.in  README.md  openapi.json  pyproject.toml
backend/app/: main.py
backend/app/api/: agent.py  ai.py  calibrate.py  channel.py  compile.py  datasets.py  deps.py  events.py  export.py  health.py  import_osm.py  import_results.py  import_scene.py  materials.py  point_import.py  projects.py  render.py  scenario.py  scene.py  segmentation.py  simulate.py
backend/app/core/: config.py  paths.py
backend/app/data/: default_rf_materials.yaml
backend/app/schemas/: __init__.py  actors.py  ai.py  calibration.py  channel.py  common.py  compile.py  datasets.py  devices.py  engines.py  materials.py  point_import.py  projects.py  results.py  scene.py  seam_agent.py  segmentation.py  simulation.py  validation.py
backend/app/services/: ai_provider.py  aodt_import.py  availability.py  calibration.py  channel_analysis.py  dataset.py  engines.py  events.py  import_jobs.py  material_assignment.py  material_impact.py  material_segmentation.py  measurement_validation.py  mesh_radio_map.py  mesh_tools.py  mitsuba_import.py  osm_import.py  plugins.py  point_import.py  project_store.py  rf_compiler.py  rfdata_export.py  scenario.py  scene_bounds.py  scene_render.py  scene_validator.py  seam_agent.py  solve_ctx.py  terrain.py  trajectory.py
backend/app/services/simulation_backends/: __init__.py  base.py  mock_backend.py  sionna_backend.py
backend/engine_workers/: sionna_rt_worker.py
backend/rf/: compile_manifest.json  generated_scene.xml
backend/seam_studio/: cli.py  main.py
backend/seam_studio/api/: agent.py  ai.py  calibrate.py  channel.py  compile.py  datasets.py  deps.py  engines.py  events.py  export.py  health.py  import_osm.py  import_results.py  import_scene.py  materials.py  point_import.py  projects.py  render.py  scenario.py  scene.py  segmentation.py  simulate.py
backend/seam_studio/core/: config.py  paths.py
backend/seam_studio/data/: default_rf_materials.yaml
backend/seam_studio/engine_workers/: __init__.py
backend/seam_studio/schemas/: __init__.py  actors.py  ai.py  calibration.py  channel.py  common.py  compile.py  devices.py  engines.py  material_impact.py  projects.py  render.py  segmentation.py  simulation.py
backend/seam_studio/services/: ai_provider.py  availability.py  calibration.py  channel_analysis.py  dataset.py  demo_project.py  engines.py  import_jobs.py  live_state.py  material_assignment.py  material_impact.py  material_segmentation.py  measurement_validation.py  mesh_radio_map.py  mesh_tools.py  mitsuba_import.py  osm_import.py  plugins.py  project_store.py  rf_compiler.py  rfdata_export.py  scenario.py  scene_render.py  scene_validator.py  seam_agent.py  solve_ctx.py  trajectory.py
backend/seam_studio/services/simulation_backends/: __init__.py  base.py  mock_backend.py  sionna_backend.py
backend/tests/: conftest.py  test_ai_evidence.py  test_ai_models.py  test_ai_parser.py  test_beamforming.py  test_calibration.py  test_channel_analysis.py  test_channel_pack.py  test_channel_persist_positions.py  test_dataset_pack.py  test_datasets.py  test_doppler.py  test_engines.py  test_events_and_aodt.py  test_face_group_split.py  test_import_api.py  test_import_jobs.py  test_live_state.py  test_material_assignment.py  test_material_impact.py  test_material_segmentation.py  test_materials_pack.py  test_measurements_pack.py  test_mitsuba_import.py  test_mock_backend.py  test_openapi_export.py  test_osm_import.py  test_packaging.py  test_plugins.py  test_point_import.py  test_project_format.py  test_project_mgmt.py  test_projects_pack.py  test_provenance_race.py  test_render.py  test_review_regressions.py  test_rf_compiler.py  test_rfdata_export.py  test_scenario.py  test_scene_bounds.py  (+11 more)
docs/: accuracy.ko.md  accuracy.md  ai_assistant.ko.md  ai_assistant.md  architecture.ko.md  architecture.md  dynamic_scattering.ko.md  dynamic_scattering.md  engines.ko.md  engines.md  extending.ko.md  extending.md  ml_datasets.ko.md  ml_datasets.md  model_validation.ko.md  model_validation.md  point_import.ko.md  point_import.md  research_ideas.md  rf_materials.ko.md  rf_materials.md  roadmap.md  rtgui_parity.ko.md  rtgui_parity.md  scene_format.ko.md  scene_format.md  sensor_ingestion.md  sionna_versions.ko.md  sionna_versions.md
docs/guides/: datasets_export.ko.md  datasets_export.md  getting_started.ko.md  getting_started.md  materials_and_ai.ko.md  materials_and_ai.md  scene_import.ko.md  scene_import.md  simulation.ko.md  simulation.md  trajectory_uav.ko.md  trajectory_uav.md
en/: index.html
en/guides/: datasets_export.html  getting_started.html  index.html  materials_and_ai.html  scene_import.html  simulation.html
examples/ml/: train_channel_estimator.py
examples/point_import/: README.ko.md  README.md  devices_geographic_hyu.json  devices_sample_demo.json  trajectory_oriented.json  trajectory_sample_demo.json  trajectory_underground_warning.json
examples/scripts/: create_demo_project.py  import_bundle_scene.py  seam_agent_bench_eval.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  actorDefaults.ts  charts.tsx  configPresets.ts  envPresets.ts  index.css  panelLayout.ts  pathFilter.ts  simConfig.ts  trajectoryUtils.ts  usePanelSize.ts  viewportSettings.ts
frontend/src/api/: client.ts
ko/: index.html
ko/guides/: getting_started.html  materials_and_ai.html  scene_import.html  simulation.html  trajectory_uav.html
plugins/example_two_ray/: README.md  plugin.py
scripts/: build_wheel.py  capture_docs_shots.mjs  export_openapi.py  install.ps1  install.sh  start.ps1  start.sh
verification/: seam_verify_results_2026-07-21.json
website/: en.html
website/en/: index.html
website/ko/: index.html
(+45 files in other folders)
