[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seam-backend"
version = "0.1.0"
description = "SEAM Studio backend - unified RF-visual scene authoring, validation, and Sionna RT compilation"
requires-python = ">=3.11"
license = { file = "../LICENSE" }
authors = [{ name = "SEAM Studio contributors" }]
dependencies = [
    "fastapi>=0.111",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "numpy>=1.26",
    "trimesh>=4.4",
    # Scene import (Mitsuba XML -> GLB) uses trimesh geometry ops that
    # require scipy at runtime.
    "scipy>=1.11",
    # trimesh ray casting (terrain-following trajectories) needs an R-tree.
    "rtree>=1.2",
    # OpenStreetMap import: extrude building footprints (shapely polygons) via
    # trimesh, which needs an FSF-approved triangulation engine at runtime.
    "shapely>=2.0",
    "mapbox-earcut>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pillow>=10.3",
    # SEAM-Agent web/image evidence retrieval (DuckDuckGo, keyless). Only used
    # when the user opts into online evidence; import stays lazy.
    "ddgs>=9.0",
]

[project.urls]
Repository = "https://github.com/jaewoo4200/SEAM"
Issues = "https://github.com/jaewoo4200/SEAM/issues"

[project.optional-dependencies]
dev = ["pytest>=8.2"]
# The real ray-tracing backend. Never required: the Mock backend and the whole
# app must work without it (HANDOFF.md rule: do not break when Sionna missing).
# Verified against sionna-rt 2.0.x (Dr.Jit/Mitsuba 3); needs a CUDA GPU or an
# LLVM CPU backend at runtime.
sionna = ["sionna-rt>=2.0"]
# Future columnar result schemas (paths.parquet, radio_map.parquet, cir.zarr).
results = ["duckdb>=1.0", "pyarrow>=16", "zarr>=2.18"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
