[build-system]
# >=77 for PEP 639 SPDX license expressions (CI installs from a clean env).
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
# The pip-installable app: `pip install seam-studio` → `seam-studio` serves
# the backend + the bundled frontend. ("seam" itself is taken on PyPI.)
name = "seam-studio"
version = "0.1.0"
description = "SEAM Studio - unified RF-visual scene authoring, RF material assignment, and Sionna RT digital-twin simulation workbench"
readme = "README.md"
requires-python = ">=3.11"
# SPDX expression (the license text lives at the repo root; a ../LICENSE file
# reference breaks modern setuptools, which forbids paths outside the project).
license = "Apache-2.0"
authors = [{ name = "Jaewoo Lee", email = "doni04164@gmail.com" }]
keywords = ["sionna", "ray-tracing", "digital-twin", "RF", "6G", "ISAC", "radio-propagation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Communications",
]
dependencies = [
    "fastapi>=0.111",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "numpy>=1.26",
    "trimesh>=4.4",
    # Scene import (Mitsuba XML -> GLB) uses trimesh geometry ops that
    # require scipy at runtime.
    "scipy>=1.11",
    # trimesh ray casting (terrain-following trajectories) needs an R-tree.
    "rtree>=1.2",
    # OpenStreetMap import: extrude building footprints (shapely polygons) via
    # trimesh, which needs an FSF-approved triangulation engine at runtime.
    "shapely>=2.0",
    "mapbox-earcut>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pillow>=10.3",
    # SEAM-Agent web/image evidence retrieval (DuckDuckGo, keyless). Only used
    # when the user opts into online evidence; import stays lazy.
    "ddgs>=9.0",
    # The real ray-tracing engine, installed by default so `pip install
    # seam-studio` matches `pip install sionna` expectations (Dr.Jit/Mitsuba
    # ship an LLVM CPU backend, so no GPU is required to install or run).
    # The app still degrades gracefully to the Mock backend if the import
    # fails at runtime (HANDOFF rule: never break when Sionna is missing).
    "sionna-rt>=2.0",
]

[project.scripts]
seam-studio = "seam_studio.cli:main"

[project.urls]
Repository = "https://github.com/jaewoo4200/SEAM"
Issues = "https://github.com/jaewoo4200/SEAM/issues"
Documentation = "https://jaewoo4200.github.io/SEAM/"

[project.optional-dependencies]
dev = ["pytest>=8.2"]
# Back-compat alias from when sionna-rt was opt-in; it is a base dependency
# now, so this extra is a no-op kept so `pip install "seam-studio[sionna]"`
# instructions keep working.
sionna = ["sionna-rt>=2.0"]
# Future columnar result schemas (paths.parquet, radio_map.parquet, cir.zarr).
results = ["duckdb>=1.0", "pyarrow>=16", "zarr>=2.18"]

[tool.setuptools.packages.find]
include = ["seam_studio*"]

[tool.setuptools.package-data]
# default_rf_materials.yaml + the frontend bundle copied in by
# scripts/build_wheel.py (seam_studio/static is gitignored; wheels carry it).
seam_studio = ["data/*.yaml", "static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
